ingress/ingress-argocd-server.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: argocd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-argo-cd-server
                port:
                  name: http
