ingress/ingress-grafana.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: grafana
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: grafana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
