ingress/ingress-parser.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: parser
  namespace: parser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: parser.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parser
                port:
                  number: 8095
